file "width_height" separated

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -28,7 +28,8 @@
 //@import 'components/grid3_rtl'; // run again
 @import 'components/padding'; //OK
 @import 'components/margin'; //OK
-@import 'components/width_height'; //OK
+@import 'components/width'; //OK
+@import 'components/height'; //OK
 @import 'components/top_right_bottom_left'; //OK
 @import 'components/shadow'; //OK -> improve later
 @import 'components/font'; //OK
