--- a/src/scss/includes/_mixins.scss
+++ b/src/scss/includes/_mixins.scss
@@ -49,3 +49,10 @@
 	-moz-column-rule: #{$rule};
 	column-rule: #{$rule};
 }
+
+@mixin border-radius($radius) {
+	-webkit-border-radius: #{$radius};
+	-moz-border-radius: #{$radius};
+	-ms-border-radius: #{$radius};
+	border-radius: #{$radius};
+}
