--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,6 +1,9 @@
-//---> Create	:	1397.03.09
+//---> Create	:	2018.05.30
 //---> Finish	:	--
 //---> Update	:	--
 /*****************************/
 
 @import "includes/color_variables";
+//@import "components/width"; //done
+//@import "components/height"; //done
+@import "components/margin";
