--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -4,6 +4,7 @@
 /*****************************/
 
 @import "includes/color_variables";
-//@import "components/width"; //done
-//@import "components/height"; //done
-@import "components/margin";
+@import "components/width"; //done
+@import "components/height"; //done
+@import "components/margin"; //done
+@import "components/padding"; //done
