--- a/src/scss/components/_height.scss
+++ b/src/scss/components/_height.scss
@@ -1,7 +1,7 @@
 //---> Create	:	2018.05.30
 //---> Finish	:	2018.05.30
 //---> Update	:	--
-/*****************************/
+//============================
 
 /* Height :
 ===========================*/
