--- a/src/scss/includes/_color_variables.scss
+++ b/src/scss/includes/_color_variables.scss
@@ -1,7 +1,7 @@
 //---> Create	:	1397.03.05
 //---> Finish	:	1397.03.05
 //---> Update	:	--
-/*****************************/
+//============================
 
 $red: (
 	"50":		#FFEBEE,
