--- a/src/scss/includes/_mixins.scss
+++ b/src/scss/includes/_mixins.scss
@@ -1,7 +1,7 @@
 //---> Create   :   1397.03.09
 //---> Finish   :   --
 //---> Update   :   --
-/*****************************/
+//============================
 
 // not all of these needed;
 
