--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,10 +1,11 @@
 //---> Create	:	2018.05.30
 //---> Finish	:	--
 //---> Update	:	--
-/*****************************/
+//============================
 
 @import "includes/color_variables";
 @import "components/width"; //done
 @import "components/height"; //done
 @import "components/margin"; //done
 @import "components/padding"; //done
+@import "components/distances";
