--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -4,8 +4,9 @@
 //============================
 
 @import "includes/color_variables";
-@import "components/width"; //done
-@import "components/height"; //done
-@import "components/margin"; //done
-@import "components/padding"; //done
-@import "components/distances";
+//@import "components/width"; //done
+//@import "components/height"; //done
+//@import "components/margin"; //done
+//@import "components/padding"; //done
+//@import "components/distances"; //done
+@import "components/fonts";
