--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -10,3 +10,4 @@
 @import "components/padding"; //done
 @import "components/distances"; //done
 @import "components/fonts"; //done
+@import "components/border_radius"; //done
