added border and outline

--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -11,3 +11,5 @@
 @import "components/distances"; //done
 @import "components/fonts"; //done
 @import "components/border_radius"; //done
+@import "components/border"; //done
+@import "components/outline"; //done
