--- a/src/scss/components/_border_radius.scss
+++ b/src/scss/components/_border_radius.scss
@@ -33,7 +33,7 @@ $i: 5;
 /* corner top left */
 $i: 0;
 @while $i <= 50 {
-	.rds_tl_#{$i}, .rds_lt_#{$i} { border-top-left-radius: #{$i}px !important; }
+	.rdstl_#{$i}, .rdslt_#{$i} { border-top-left-radius: #{$i}px !important; }
 	
 	@if $i < 10 {
 		$i: $i + 1;
@@ -47,7 +47,7 @@ $i: 0;
 /* corner top left percent */
 $i: 5;
 @while $i <= 50 {
-	.rds_tl_#{$i}pc, .rds_lt_#{$i}pc { border-top-left-radius: #{$i}unquote("%") !important; }
+	.rdstl_#{$i}pc, .rdslt_#{$i}pc { border-top-left-radius: #{$i}unquote("%") !important; }
 	$i: $i + 5;
 }
 
@@ -55,7 +55,7 @@ $i: 5;
 /* corner top right */
 $i: 0;
 @while $i <= 50 {
-	.rds_tr_#{$i}, .rds_rt_#{$i} { border-top-right-radius: #{$i}px !important; }
+	.rdstr_#{$i}, .rdsrt_#{$i} { border-top-right-radius: #{$i}px !important; }
 	
 	@if $i < 10 {
 		$i: $i + 1;
@@ -69,7 +69,7 @@ $i: 0;
 /* corner top right percent */
 $i: 5;
 @while $i <= 50 {
-	.rds_tr_#{$i}pc, .rds_rt_#{$i}pc { border-top-right-radius: #{$i}unquote("%") !important; }
+	.rdstr_#{$i}pc, .rdsrt_#{$i}pc { border-top-right-radius: #{$i}unquote("%") !important; }
 	$i: $i + 5;
 }
 
@@ -77,7 +77,7 @@ $i: 5;
 /* corner bottom left */
 $i: 0;
 @while $i <= 50 {
-	.rds_bl_#{$i}, .rds_lb_#{$i} { border-bottom-left-radius: #{$i}px !important; }
+	.rdsbl_#{$i}, .rdslb_#{$i} { border-bottom-left-radius: #{$i}px !important; }
 	
 	@if $i < 10 {
 		$i: $i + 1;
@@ -91,17 +91,15 @@ $i: 0;
 /* corner bottom left percent */
 $i: 5;
 @while $i <= 50 {
-	.rds_bl_#{$i}pc, .rds_lb_#{$i}pc { border-bottom-left-radius: #{$i}unquote("%") !important; }
+	.rdsbl_#{$i}pc, .rdslb_#{$i}pc { border-bottom-left-radius: #{$i}unquote("%") !important; }
 	$i: $i + 5;
 }
-
-
 
 
 /* corner bottom right */
 $i: 0;
 @while $i <= 50 {
-	.rds_br_#{$i}, .rds_rb_#{$i} { border-bottom-right-radius: #{$i}px !important; }
+	.rdsbr_#{$i}, .rdsrb_#{$i} { border-bottom-right-radius: #{$i}px !important; }
 	
 	@if $i < 10 {
 		$i: $i + 1;
@@ -115,6 +113,6 @@ $i: 0;
 /* corner bottom right percent */
 $i: 5;
 @while $i <= 50 {
-	.rds_br_#{$i}pc, .rds_rb_#{$i}pc { border-bottom-right-radius: #{$i}unquote("%") !important; }
+	.rdsbr_#{$i}pc, .rds_rb_#{$i}pc { border-bottom-right-radius: #{$i}unquote("%") !important; }
 	$i: $i + 5;
 }
