--- a/src/scss/components/_bg.scss
+++ b/src/scss/components/_bg.scss
@@ -3,6 +3,8 @@
 //---> Update   :   --
 /*****************************/
 
+/* bg :
+===========================*/
 .bg_cover,
 .cover {
 	position: absolute;
