--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -17,3 +17,4 @@
 @import "components/outline"; //done
 @import "components/bg"; //done
 @import "components/opacity"; //done
+@import "components/transform";
