--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -17,4 +17,6 @@
 @import "components/outline"; //done
 @import "components/bg"; //done
 @import "components/opacity"; //done
-@import "components/transform";
+@import "components/transform"; //done for now
+@import "components/filters"; //done
+@import "components/shadow";
