--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -19,4 +19,4 @@
 @import "components/opacity"; //done
 @import "components/transform"; //done for now
 @import "components/filters"; //done
-@import "components/shadow";
+@import "components/shadow"; //done
