--- a/src/scss/components/_margin.scss
+++ b/src/scss/components/_margin.scss
@@ -7,7 +7,10 @@
 ===========================*/
 // between -10~10 step length=1; else =5
 
-.mg_a {margin: 0 auto;}
+.mg_a {
+	margin-right: auto !important;
+	margin-left: auto !important;
+}
 
 $directions: (
 	/*$dir : $direction*/
