--- a/src/scss/components/_margin.scss
+++ b/src/scss/components/_margin.scss
@@ -11,6 +11,12 @@
 	margin-right: auto !important;
 	margin-left: auto !important;
 }
+.mgr_a {
+	margin-right: auto !important;
+}
+.mgl_a {
+	margin-left: auto !important;
+}
 
 $directions: (
 	/*$dir : $direction*/
